Fixed image spacing on cards

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -70,7 +70,6 @@ nav h1 {
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;/*(auto-fit, minmax(15rem, 1fr));*/
-  grid-template-rows: auto;
   gap: 1rem;
   justify-content: center;
   align-items: center;
@@ -79,7 +78,7 @@ nav h1 {
 }
 
 .card {
-  display: fixed;
+  display: flex;
   align-items: center;
   flex-direction: column;
   width: 20rem;
@@ -94,7 +93,6 @@ nav h1 {
   width: 100%;
   height: 15rem;
   object-fit: cover;
-  text-align: left;
 }
 
 .card-name {
